--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 }
 </script>
 </head>
-  <body class="bg-slate-900 text-slate-100">
+ <body class="bg-slate-900 text-slate-100">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
